feat: some works for PluginManager.loadPlugins()